--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     //Add Retrofit Scalars converter
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    //Add ViewModel
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    //Add LiveData
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
 
 
 }
