--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.PhotoPageActivity"/>
         <receiver android:name=".broacast.NotificationReceiver"
             android:permission="com.example.photogallery.PRIVATE"
             android:exported="false">
